--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
+        android:usesCleartextTraffic="true"
         android:label="Pacotes123"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
@@ -42,4 +46,5 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+        
 </manifest>
