--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   url_launcher: ^6.3.2
   share_plus: ^12.0.1
   path_provider: ^2.1.5
+  package_info_plus: ^9.0.0
+  device_info_plus: ^12.3.0
+  connectivity_plus: ^7.0.0
+  geolocator: ^14.0.2
+  qr_code_scanner_plus: ^2.0.14
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
